# automatic-rotary-phone

./: CMakeLists.txt
include/: errno.h  framebuf.h  model.h  softrndr.h  sysmem.h  vecmath.h
sce_sys/livearea/contents/: template.xml
src/: framebuf.c  main.c  model.c  softrndr.c  sysmem.c  vecmath.c
